--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,45 @@
 </head>
 
 <body>
-
+<header class="header">
+    <div class="container">         
+        <div class="header-container">
+            <a href="#" class="header-logo">
+                <svg width="82" height="32" class="header-icon">
+                    <use  href="./svg/sprite.svg#icon-odigo-logo"></use>
+                </svg>
+            </a>
+            <nav class="header-navigation">
+                <ul class="header-menu">
+                    <li class="header-list">
+                        <a href="" class="header-link">Articles</a></li>
+                    <li class="header-list">
+                        <a href="" class="header-link">Locations</a></li>
+                    <li class="header-list">
+                        <a href="" class="header-link">Videos</a></li>
+                    <li class="header-list">
+                        <a href="" class="header-link">Sign in</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+<section class="hero">
+    <div class="container">
+        <div class="hero-section">
+            <h1 class="hero-tittle">Discover Amazing places in Japan</h1>
+            <p class="hero-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
+            <ul class="hero-input-list">
+                <li class="hero-list">
+                    <input type="text" class="hero-input"  placeholder="What would you like to do?"></li>
+                <li class="hero-list">
+                    <input type="text" class="hero-input"  placeholder="Where would you like to go?"></li>
+                <li class="hero-list">
+                    <button class="hero-btn">SEARCH</button></li>
+            </ul>
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
