--- a/Index.html
+++ b/Index.html
@@ -55,6 +55,37 @@
         </div>
     </div>
 </section>
+<section class="benefits">
+    <div class="container">
+        <div class="benefits-container">
+            <h2 class="benefits-tittle">Benefits of Odigo</h2>
+            <ul class="benefits-list">
+                <li class="benefits-item">
+                        <img class="benefits-icon" width="58px" height="58px" src="./img/Icon-dom.png" alt="dom">
+                        <h3 class="benefits-title-text">Welcome to Odigo!</h3>
+                        <p class="benefits-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                        <a href="" class="benefits-link">LEARN MORE <span class="span"><svg width="33" height="8">
+                            <use href="./svg/sprite.svg#icon-shape"></use></a>                  
+                </li>
+                <li class="benefits-item">
+                        <img class="benefits-icon" width="58px" height="58px" src="./img/Icon-people.png" alt="people">
+                        <h3 class="benefits-title-text">Your Personal Japan Guide</h3>
+                        <p class="benefits-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                        <a href="" class="benefits-link">LEARN MORE <span class="span"><svg width="33" height="8">
+                            <use href="./svg/sprite.svg#icon-shape"></use></a>                    
+                </li>
+                <li class="benefits-item">
+                        <img class="benefits-icon" width="58px" height="58px" src="./img/Icon-magazine.png" alt="magazine">
+                        <h3 class="benefits-title-text">Promoting Local Businesses</h3>
+                        <p class="benefits-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                        <a href="" class="benefits-link">LEARN MORE<span class="span"><svg width="33" height="8">
+                            <use href="./svg/sprite.svg#icon-shape"></use>
+                        </svg></span></a>                    
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
