--- a/Index.html
+++ b/Index.html
@@ -65,14 +65,14 @@
                         <h3 class="benefits-title-text">Welcome to Odigo!</h3>
                         <p class="benefits-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
                         <a href="" class="benefits-link">LEARN MORE <span class="span"><svg width="33" height="8">
-                            <use href="./svg/sprite.svg#icon-shape"></use></a>                  
+                            <use href="./svg/sprite.svg#icon-shape"></use></svg></a>                  
                 </li>
                 <li class="benefits-item">
                         <img class="benefits-icon" width="58px" height="58px" src="./img/Icon-people.png" alt="people">
                         <h3 class="benefits-title-text">Your Personal Japan Guide</h3>
                         <p class="benefits-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
                         <a href="" class="benefits-link">LEARN MORE <span class="span"><svg width="33" height="8">
-                            <use href="./svg/sprite.svg#icon-shape"></use></a>                    
+                            <use href="./svg/sprite.svg#icon-shape"></use></svg></a>                    
                 </li>
                 <li class="benefits-item">
                         <img class="benefits-icon" width="58px" height="58px" src="./img/Icon-magazine.png" alt="magazine">
@@ -84,6 +84,58 @@
                 </li>
             </ul>
         </div>
+    </div>
+</section>
+<section class="inspired">
+    <div class="container">
+        <div class="inspired-town">
+<div class="inspired-town-ttile">
+                <h2 class="town-tittle">Get inspired for your next trip</h2>
+                <a href="" class="inspired-link">VIEW ALL <span class="span"><svg width="33" height="8">
+                    <use href="./svg/sprite.svg#icon-shape"></use></svg></a>            
+</div>
+<div class="town-grid">
+    <a href="" class="image image1">
+        <img width="619px" height="354px" src="./img/town1.jpg" alt="Mount Fuji">
+        <h3 class="caption">Mount Fuji</h3>      
+    </a>
+    <a href="" class="image image2">
+        <img width="619px" height="354px" src="./img/town2.jpg" alt="Kyoto">
+        <h3 class="caption">Kyoto</h3>
+    </a>
+</div>
+<div class="town-grid-two">
+<a href="" class="image image3">
+    <img src="./img/town3.jpg" alt="Tokyo">
+    <h3 class="caption">Tokyo</h3>
+</a>
+<a href="#" class="image image4">
+    <img src="./img/town4.jpg" alt="Niigata">
+    <h3 class="caption">Niigata</h3>
+</a>
+
+<a href="" class="image image5">
+    <img src="./img/town5.jpg" alt="Sapporo">
+    <h3 class="caption">Sapporo</h3>
+</a> 
+</div>
+</div>           
+<div class="inspired-description">
+    <ul class="description-list">
+        <li class="description-item">
+            <img src="./img/tottori1.jpg" alt="" class="description-icon">
+            <h3 class="description-tittle-text">Featured Neighborhood: Kyoto’s Arashiyama</h3>
+            <p class="description-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
+            <a href="" class="description-link">VIEW NEIGHBORHOOD</a>
+        </li>
+        <li class="description-item">
+            <h3 class="description-tittle-text">Prefecture in Focus: Tottori</h3>
+            <p class="description-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
+            <a href="" class="description-link">VIEW PREFECTURE</a>
+            <img src="./img/tottori2.jpg" alt="" class="description-icon">                   
+        </li>
+    </ul>
+</div>      
     </div>
 </section>
 </body>
