--- a/Index.html
+++ b/Index.html
@@ -141,6 +141,157 @@
     </div>               
 </div>
 </section>
+<section class="visit">
+    <div class="container">
+        <div class="visit-container">
+            <h2 class="visit-tittle">Today top places to visit</h2>
+            <ul class="visit-list">
+                <li class="visit-item" data-place="NAGOYA">
+                    <img width="386px" height="377px" src="./img/like1.jpg" alt="" class="visit-picture">
+                    <span class="visit-picture-subscribe">
+                        <h3 class="visit-picture-subscribe-tittle">NAGOYA</h3>                   
+                        <ul class="visit-picture-subscribe-list">
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text like-count">221</p>                    
+                                <svg width="16px" height="15px" class="visit-picture-subscribe-icon like-button">
+                                    <use href="./svg/sprite.svg#icon-like"></use>
+                                </svg>
+                            </li>                                     
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text comment-count">50</p>
+                                <svg width="14px" height="14px" class="visit-picture-subscribe-icon subscribe-icon comment-button">
+                                    <use href="./svg/sprite.svg#icon-coments"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </span>
+                    <p class="visit-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                    <a href="" class="visit-link">SEE MORE</a>
+                </li>
+                <li class="visit-item" data-place="NAGOYA">
+                    <img width="386px" height="377px" src="./img/like2.jpg" alt="" class="visit-picture">
+                    <span class="visit-picture-subscribe">
+                        <h3 class="visit-picture-subscribe-tittle">NIIGATA</h3>                   
+                        <ul class="visit-picture-subscribe-list">
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text like-count">221</p>                    
+                                <svg width="16px" height="15px" class="visit-picture-subscribe-icon like-button">
+                                    <use href="./svg/sprite.svg#icon-like"></use>
+                                </svg>
+                            </li>                                     
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text comment-count">50</p>
+                                <svg width="14px" height="14px" class="visit-picture-subscribe-icon subscribe-icon comment-button">
+                                    <use href="./svg/sprite.svg#icon-coments"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </span>
+                    <p class="visit-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                    <a href="" class="visit-link">SEE MORE</a>
+                </li>
+                <li class="visit-item" data-place="NAGOYA">
+                    <img width="386px" height="377px" src="./img/like3.jpg" alt="" class="visit-picture">
+                    <span class="visit-picture-subscribe">
+                        <h3 class="visit-picture-subscribe-tittle">OSAKA</h3>                   
+                        <ul class="visit-picture-subscribe-list">
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text like-count">221</p>                    
+                                <svg width="16px" height="15px" class="visit-picture-subscribe-icon like-button">
+                                    <use href="./svg/sprite.svg#icon-like"></use>
+                                </svg>
+                            </li>                                     
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text comment-count">50</p>
+                                <svg width="14px" height="14px" class="visit-picture-subscribe-icon subscribe-icon comment-button">
+                                    <use href="./svg/sprite.svg#icon-coments"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </span>
+                    <p class="visit-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                    <a href="" class="visit-link">SEE MORE</a>
+                </li>
+                <li class="visit-item" data-place="NAGOYA">
+                    <img width="386px" height="377px" src="./img/like4.jpg" alt="" class="visit-picture">
+                    <span class="visit-picture-subscribe">
+                        <h3 class="visit-picture-subscribe-tittle">SAITAMA</h3>                   
+                        <ul class="visit-picture-subscribe-list">
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text like-count">221</p>                    
+                                <svg width="16px" height="15px" class="visit-picture-subscribe-icon like-button">
+                                    <use href="./svg/sprite.svg#icon-like"></use>
+                                </svg>
+                            </li>                                     
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text comment-count">50</p>
+                                <svg width="14px" height="14px" class="visit-picture-subscribe-icon subscribe-icon comment-button">
+                                    <use href="./svg/sprite.svg#icon-coments"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </span>
+                    <p class="visit-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                    <a href="" class="visit-link">SEE MORE</a>
+                </li>
+                <li class="visit-item" data-place="NAGOYA">
+                    <img width="386px" height="377px" src="./img/like5.jpg" alt="" class="visit-picture">
+                    <span class="visit-picture-subscribe">
+                        <h3 class="visit-picture-subscribe-tittle">UENO</h3>                   
+                        <ul class="visit-picture-subscribe-list">
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text like-count">221</p>                    
+                                <svg width="16px" height="15px" class="visit-picture-subscribe-icon like-button">
+                                    <use href="./svg/sprite.svg#icon-like"></use>
+                                </svg>
+                            </li>                                     
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text comment-count">50</p>
+                                <svg width="14px" height="14px" class="visit-picture-subscribe-icon subscribe-icon comment-button">
+                                    <use href="./svg/sprite.svg#icon-coments"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </span>
+                    <p class="visit-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                    <a href="" class="visit-link">SEE MORE</a>
+                </li>
+                <li class="visit-item" data-place="NAGOYA">
+                    <img width="386px" height="377px" src="./img/like6.jpg" alt="" class="visit-picture">
+                    <span class="visit-picture-subscribe">
+                        <h3 class="visit-picture-subscribe-tittle">SHIBUYA</h3>                   
+                        <ul class="visit-picture-subscribe-list">
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text like-count">221</p>                    
+                                <svg width="16px" height="15px" class="visit-picture-subscribe-icon like-button">
+                                    <use href="./svg/sprite.svg#icon-like"></use>
+                                </svg>
+                            </li>                                     
+                            <li class="visit-picture-subscribe-item">
+                                <p class="visit-picture-subscribe-text comment-count">50</p>
+                                <svg width="14px" height="14px" class="visit-picture-subscribe-icon subscribe-icon comment-button">
+                                    <use href="./svg/sprite.svg#icon-coments"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                    </span>
+                    <p class="visit-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                    <a href="" class="visit-link">SEE MORE</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<div class="container">
+    <div class="video-container  paused">
+        <video id="myVideo" poster="./img/yaponia.jpg" muted>
+            <source src="./video/3177175-hd_1920_1080_30fps.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="play-button">&#9658;</div>
+    </div>
+</div>
+<script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
