--- a/Index.html
+++ b/Index.html
@@ -290,6 +290,38 @@
         <div class="play-button">&#9658;</div>
     </div>
 </div>
+<section class="footer">
+    <div class="container">
+        <div class="footer-container">
+            <a href="" class="logo">
+                <svg width="170" height="64" class="header-icon">
+                    <use  href="./svg/sprite.svg#icon-odigo-logo"></use>
+                </svg>
+            </a>
+            <ul class="footer-list">
+                <li class="footer-item"><a href="" class="footer-link"></a><h3 class="footer-link-text">Company</h3></li>
+                <li class="footer-item"><a href="" class="footer-link">About </a></li>
+                <li class="footer-item"><a href="" class="footer-link">Team</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Careers</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Privacy Policy</a></li>
+            </ul>
+            <ul class="footer-list">
+                <li class="footer-item"><a href="" class="footer-link"></a><h3 class="footer-link-text">Locations</h3></li>
+                <li class="footer-item"><a href="" class="footer-link">Tokyo</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Kyoto</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Osaka</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Hokkaido</a></li>
+            </ul>
+            <ul class="footer-list">
+                <li class="footer-item"><a href="" class="footer-link"></a><h3 class="footer-link-text">Social Media</h3></li>
+                <li class="footer-item"><a href="" class="footer-link">Facebook</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Twitter</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Instagram</a></li>
+                <li class="footer-item"><a href="" class="footer-link">Youtube</a></li>
+            </ul>
+        </div>
+    </div>
+</section>
 <script type="module" src="./js/main.js"></script>
 </body>
 
